# PolarDB-for-PostgreSQL

./: .cirrus.yml  .git-blame-ignore-revs  .gitignore  404.html  CONTRIBUTING.md  GNUmakefile.in  LICENSE  Makefile  NOTICE  README-CN.md  README.md  README_zh.md  Readme.md  Roadmap of PolarDB (1).md  build.sh  clean.sh  configure  configure.ac  configure.in  delta_coverage.pl  index.html  install_dependencies.sh  onekey.sh  package-lock.json  package.json  pnpm-lock.yaml  polardb_build.sh  tpch_copy.sh
pgreplay/: .gitignore  CHANGELOG  Dockerfile  LICENSE  Makefile.in  README.md  TODO  config.h.in  configure  configure.in  database.c  main.c  parse.c  pgreplay.1  pgreplay.h  pgreplay.html  replayfile.c  replayitem.c  windows.c
src/backend/polar_dma/libconsensus/consensus/: .gitignore  CMakeLists.txt  Makefile  build.sh
src/backend/polar_dma/libconsensus/consensus/algorithm/: configuration.cc  crc.cc  log_meta_cache.cc  msg_compress.cc  paxos.cc  paxos_error.cc  paxos_log_cache.cc  paxos_server.cc
src/backend/polar_dma/libconsensus/consensus/include/: client_service.h  consensus.h  crc.h  easyNet.h  log_meta_cache.h  msg_compress.h  multi_process_queue.h  net.h  paxos.h  paxos.pb.h  paxos_configuration.h  paxos_error.h  paxos_log.h  paxos_log_cache.h  paxos_option.h  paxos_server.h  service.h  single_process_queue.h  thread_timer.h
src/backend/polar_dma/libconsensus/consensus/net/: easyNet.cc
src/backend/polar_dma/libconsensus/consensus/protocol/: .gitignore  build_pb.sh  paxos.pb.cc  paxos.pb.h  paxos.proto
src/backend/polar_dma/libconsensus/consensus/service/: client_service.cc  service.cc  thread_timer.cc
src/backend/polar_dma/libconsensus/polar_wrapper/: CMakeLists.txt  Makefile  build.sh  polar_consensus_c.cc  polar_consensus_log.cc
src/backend/polar_dma/libconsensus/polar_wrapper/include/: polar_consensus_c.h  polar_consensus_log.h  polar_consensus_stats.h
src/backend/px_optimizer/: CMakeLists.txt  COPYRIGHT  Makefile  README.format.md  README.md  README.memo.md  README.tidy.md  StyleGuide.md  gporca.mk  px_optimizer.mk
src/backend/px_optimizer/concourse/: README.md  build_and_test.py  test_explain_pipeline.yml  test_orca_pipeline.yml  vars_example.yml
src/backend/px_optimizer/concourse/xerces-c/: build_xerces.py  xerces-c-3.1.2.tar.gz.sha256
src/backend/px_optimizer/data/dxl/: formatxml.sh
src/backend/px_optimizer/data/dxl/cost/: cost0.xml  wrong-cost.xml
src/backend/px_optimizer/data/dxl/csq_tests/: dxl-q1.xml  dxl-q10.xml  dxl-q11.xml  dxl-q12.xml  dxl-q13.xml  dxl-q14.xml  dxl-q15.xml  dxl-q16.xml  dxl-q2.xml  dxl-q3.xml  dxl-q4.xml  dxl-q5.xml  dxl-q6.xml  dxl-q7.xml  dxl-q8.xml  dxl-q9.xml
src/backend/px_optimizer/data/dxl/expressiontests/: AggNoGroupByPlan.xml  AggNoGroupByQuery.xml  ArrayCmpPlan.xml  ArrayCmpQuery.xml  ArrayPlan.xml  ArrayQuery.xml  BroadcastQuery.xml  CScalarConstArray.xml  CoalescePlan.xml  CoalesceQuery.xml  ConstPlan.xml  ConstQuery.xml  ConstTableGetPlan.xml  ConstTableGetQuery.xml  ContradictionPlan.xml  ContradictionQuery.xml  CorrelatedSubqueryBooleanPlan.xml  CorrelatedSubqueryBooleanQuery.xml  CorrelatedSubqueryFilterPlan.xml  CorrelatedSubqueryFilterQuery.xml  CorrelatedSubqueryOuterPlan.xml  CorrelatedSubqueryOuterQuery.xml  CorrelatedSubqueryPlan.xml  CorrelatedSubqueryQuery.xml  CorrelatedSubqueryResultPlan.xml  DifferencePlan.xml  DifferenceQuery.xml  DoubleSortPlan.xml  DoubleSortQuery.xml  DynamicGetBooleanNotPlan.xml  DynamicGetBooleanNotQuery.xml  DynamicGetBooleanPlan.xml  DynamicGetBooleanQuery.xml  DynamicGetCountStarPlan.xml  DynamicGetCountStarQuery.xml  DynamicGetHashJoinOtherKeyPlan.xml  DynamicGetHashJoinOtherKeyQuery.xml  DynamicGetHashJoinPartKeyPlan.xml  DynamicGetHashJoinPartKeyQuery.xml  DynamicGetMultiJoinPlan.xml  (+161 more)
src/backend/px_optimizer/data/dxl/indexjoin/: positive_04.mdp
src/backend/px_optimizer/data/dxl/metadata/: md.xml
src/backend/px_optimizer/data/dxl/minidump/: 106-way-join.mdp  3WayJoinOnMultiDistributionColumnsTables.mdp  3WayJoinOnMultiDistributionColumnsTablesNoMotion.mdp  3WayJoinUsingOperatorsOfNonDefaultOpfamily.mdp  4WayJoinInferredPredsRemovedWith2Motion.mdp  AddEqualityPredicates.mdp  AddPredsInSubqueries.mdp  AddRedistributeBeforeInsert-1.mdp  AddRedistributeBeforeInsert-2.mdp  AddRedistributeBeforeInsert-3.mdp  AddRedistributeBeforeInsert-4.mdp  AddRedistributeBeforeInsert-5.mdp  Agg-Limit.mdp  Agg-NonSplittable.mdp  AggWithSubqArgs.mdp  AggWithVolatileFunc.mdp  AggonExternalTableNoMotion.mdp  AggregateWithSkew.mdp  AggregatesConstraintDeriveNegation.mdp  AllSubqueryWithSubqueryInScalar.mdp  AntiSemiJoin2Select-1.mdp  AntiSemiJoin2Select-2.mdp  AnyPredicate-Over-UnionOfConsts.mdp  AnySubq-With-NonScalarSubqueryChild-1.mdp  AnySubq-With-NonScalarSubqueryChild-2.mdp  AnySubq-With-NonScalarSubqueryChild-3.mdp  AnySubqueryWithAllSubqueryInScalar.mdp  AnySubqueryWithSubqueryInScalar.mdp  AnySubqueryWithVolatileComp.mdp  ArrayCmp-IN-ManyElements.mdp  (+955 more)
src/backend/px_optimizer/libgpdbcost/: CMakeLists.txt  Makefile
src/backend/px_optimizer/libgpdbcost/src/: CCostModelGPDB.cpp  CCostModelParamsGPDB.cpp  CCostModelParamsPolarDB.cpp  CCostModelPolarDB.cpp  ICostModel.cpp  Makefile
src/backend/px_optimizer/libgpopt/: CMakeLists.txt  Makefile
src/backend/px_optimizer/libgpopt/src/: Makefile  exception.cpp  init.cpp
src/backend/px_optimizer/libgpos/: CMakeLists.txt  Makefile
src/backend/px_optimizer/libgpos/server/: CMakeLists.txt
src/backend/px_optimizer/libgpos/src/: Makefile  _api.cpp  utils.cpp
src/backend/px_optimizer/libnaucrates/: CMakeLists.txt  Makefile
src/backend/px_optimizer/libnaucrates/src/: CCostModelConfigSerializer.cpp  CDXLUtils.cpp  CIdGenerator.cpp  Makefile  exception.cpp  init.cpp  traceflags.cpp
src/backend/px_optimizer/scripts/: cal_bitmap_test.py  convert_minirepro_5_to_6.py  convert_minirepro_6_to_7.py  dxl_modify_partitioned_index.py  fix_lookup_failure.py  fix_mdps.py  get_debug_event_counters.py
src/backend/px_optimizer/scripts/tests/: test_cal_bitmap_test.py
src/backend/px_optimizer/server/: CMakeLists.txt  dxl.xsd  fixdxl.sh
(+6712 files in other folders)
